--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -620,3 +620,9 @@ $progress-sidebar-width: 260px;
 ._progressSidebar {
   @include sidebar-right-sidebar($progress-min-width, $progress-sidebar-width);
 }
+
+._invisiblePlaceHolder {
+  position: absolute;
+  visibility: hidden;
+  width: 1px;
+}
