--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -14,6 +14,10 @@ body {
   color: #922!important
 }
 
+.noUi-connect {
+  background: rgba(90,151,243,.75);
+}
+
 ._PathPicker {
   font-size: 13px;
   display: none;
@@ -327,6 +331,34 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     }
   }
 
+  > ._list > ._sliderHeader {
+    margin-top: 20px;
+    margin-bottom: 24px;
+    display: flex;
+    width: 100%;
+    > ._heading {
+      margin-bottom: 0px;
+    }
+    > div:first-child {
+      margin-right: 20px;
+    }
+    > div:not(:first-child) {
+      margin-left: 8px;
+    }
+    > div._sliderFill {
+      flex: 1;
+    }
+    > div._slider {
+      @media (min-width: 1300px)                         {width: 630px}
+      @media (min-width: 1200px) and (max-width: 1299px) {width: 530px}
+      @media (min-width: 1100px) and (max-width: 1199px) {width: 430px}
+      @media (min-width: 1000px) and (max-width: 1099px) {width: 330px}
+      @media (max-width:  999px)                         {width: 200px}
+      margin-left: 28px;
+      margin-top: 27px;;
+    }
+  }
+
   > ._list {
     clear: all;
     overflow-y: scroll;
@@ -474,12 +506,15 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     > ._netWorthGraphContainer {
       position: relative;
       > ._curNetWorth {
+        background-color: rgba(252,252,252,.5);
+        box-shadow: 0px 0px 1px rgba(0,0,0,.3), 0px 0px 3px rgba(0,0,0,.15);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
         position: absolute;
         top:  50px;
         left: 150px;
         border: 1px solid #e0e0e0;
         padding: 4px;
-        background: #fcfcfc;
         z-index: 2000;
         font-size: 14px;
         font-weight: 100;
