--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -384,7 +384,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
 
   > ._list {
     clear: all;
-    overflow-y: scroll;
+    overflow-y: view;
     position: relative;
     padding: 0px 40px;
     width: auto;
@@ -412,7 +412,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
       margin-bottom: 8px;
       margin-left: 8px;
     }
-    > * {
+    > div {
       margin-top:    50px;
       margin-bottom: 100px;
     }
@@ -445,7 +445,6 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     ._budgetHistoryTable > div > table,
     ._netWorthTable {
       border-collapse: collapse;
-/*      width: 100%;*/
       padding: 0px 4px;
       color: #222;
       > thead, > tbody, > tfoot {
@@ -481,8 +480,11 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
             padding-right: 2px;
             font-size: 13px;
           }
-          > td {
+          > td:not(:first-child) {
             min-width: 50px;
+          }
+          > td:first-child {
+            min-width: 150px;
           }
           &:nth-child(2) {
             color: #bbb;
