--- a/code/sass/ui.css
+++ b/code/sass/ui.css
@@ -136,6 +136,55 @@ body {
       }
     }
   }
+  > ._addPopup {
+    @include user-select (none);
+    position: absolute;
+    z-index: 9999;
+    padding: 16px;
+    background: rgba(255,255,255,.80);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 6px;
+    box-shadow: $drop-shadow;
+    color: #555;
+    > div:first-child {
+      font-size: 22px;
+      color: #33b1ff;
+      font-width: 100;
+      margin-bottom: 16px;
+    }
+    > form {
+      margin-left: 16px;
+      > label {
+        > input:first-child {
+          margin-right: 8px;
+        }
+        > span {
+          margin-right: 4px;
+        }
+        > * {
+          vertical-align: top;
+        }
+      }
+    }
+    > div:last-child {
+      margin-top: 16px;
+      > button {
+        border:     4px solid #33b1ff;
+        font-size:  16px;
+        font-weight: 500;
+        &:first-child {
+          margin-right: 32px;
+          background: #33b1ff;
+          color:      white;
+        }
+        &:last-child {
+          color:       #33b1ff;
+          background:  white;
+        }
+      }
+    }
+  }
 }
 
 ._login_dialogue {
@@ -183,6 +232,9 @@ body {
       color: rgb(200,0,0);
     }
     > ._remember {
+      > label > * {
+        vertical-align: top;
+      }
       > label > input {
         margin-right: 8px;
       }
