--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -455,6 +455,35 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     ._netWorthTable{
       margin-bottom: 100px;
     }
+    div._budgetTable > div > table, div._activityTable > div > table {
+
+/*      @media (min-width: 1335px  - 1px) {background: red}*/
+      @media (max-width: 1400px)        {
+        > thead > tr > th {
+          font-size: 16px;
+        }
+        > tfoot, > tbody > tr._subTotal {
+          > tr > td:first-child, & > td:first-child {
+            font-size: 14px;
+          }
+        }
+        > tfoot, > tbody {
+          > tr {
+            > td {
+              font-size: 11px;
+            }
+            > td:not(:first-child) {
+              min-width: 58px;
+            }
+            > td:first-child {
+              min-width: 125px;
+            }
+          }
+        }
+      }
+
+
+    }
     ._budgetTable > div > table,
     ._activityTable > div > table,
     ._budgetHistoryTable > div > table,
@@ -496,7 +525,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
             font-size: 13px;
           }
           > td:not(:first-child) {
-            min-width: 50px;
+            min-width: 70px;
           }
           > td:first-child {
             min-width: 150px;
@@ -536,7 +565,6 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
               border-right: 1px solid #aaa;
             }
             &:not(:first-child) {
-              min-width: 70px;
               text-align: right;
               border-top: 1px dotted #aaa;
               border-bottom: 1px dotted #aaa;
