--- a/code/sass/TransactionTable.css
+++ b/code/sass/TransactionTable.css
@@ -515,6 +515,8 @@ div._TransactionHUD {
       @include popup-content();
       border-radius: 0px;
       box-shadow: none;
+      padding-bottom: 8px;
+      padding-left:   16px;
       > div {
         font-size: 11px!important;
         &:first-child {
