--- a/code/sass/budget.css
+++ b/code/sass/budget.css
@@ -329,6 +329,26 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     position: relative;
   }
 
+  /* Freeze first column on scroll */
+   div._budgetHistoryTable:not(._popup) > div, div._netWorthTableContainer:not(._popup) {
+        width: calc(100vw - 80px)!important;
+        overflow-x: scroll;
+          > table > * > tr > td:first-child,  > table > * > tr > th:first-child {
+              position:absolute;
+              width: 150px;
+              padding-right: 4px!important;
+          }
+          > table > * > tr._subtotal > td:first-child {
+              background: #aaa;
+          }
+          > table > * > tr:not(._subtotal) > th:first-child, > table > * > tr:not(._subtotal) > td:first-child {
+              background: white;
+          }
+        > table > * > tr > td:nth-child(2),  > table > * > tr > th:nth-child(2) {
+            padding-left: 158px!important;
+        }
+  }
+
   div._budgetTable, div._activityTable, div._budgetHistoryTable, div._netWorthTable._popup {
     &._popup {
       @include popup-container();
@@ -472,16 +492,6 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         border-right: 1px solid #aaa;
       }
     }
-    ._netWorthTableContainer {
-      width: auto;
-      padding-right: 40px;
-      margin-bottom: 100px;
-      display: table;
-    }
-    ._budgetTableContainer {
-      padding-right: 40px;
-      display: table;
-    }
     div._budgetTable > div > table, div._activityTable > div > table {
       @media (max-width: 1400px)        {
         > thead > tr > th {font-size: 16px}
@@ -523,8 +533,10 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         padding-left: 4px;
         padding-right: 4px;
       }
+      > * > tr._subtotal {
+          height: 22px;
+      }
       > tfoot, > tbody > tr._subtotal {
-        border-top: 1px solid #aaa;
         font-weight: 400;
         > tr > td:not(:first-child), & > td:not(:first-child) {
           text-align: right;
@@ -532,6 +544,16 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
         > tr > td:first-child, & > td:first-child {
           font-size: 16px;
         }
+      }
+      > * tr > td:first-child {
+          padding-top: 1px;
+      }
+      > * tr:not(:last-child) > td:first-child {
+          padding-top: 2px;
+          padding-bottom: 2px;
+      }
+      > tbody > tr > td:first-child {
+          border-left: 1px solid #aaa;
       }
       > tfoot, > tbody {
         > tr {
@@ -553,20 +575,16 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
       }
       > tbody {
         border-right: 1px solid #aaa;
+        border-top: 1px solid #aaa;
+        border-bottom: 1px solid #aaa;
         > tr._subtotal {
           background: #aaa;
           color: white;
-        }
-        > tr:not(:first-child):not(._subtotal) > td:first-child {
-          border-top: 1px solid transparent;
         }
         > tr:not(._subtotal) {
           &:nth-child(even) {
             background-color: #f6f6f6;
           }
-          border-top: 1px dotted #aaa;
-          border-bottom: 1px dotted #aaa;
-          border-left: 1px dotted #aaa;
           > td {
             &:not(.negative) {
               color: #666;
@@ -584,7 +602,9 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
               text-align: right;
               border-top: 1px dotted #aaa;
               border-bottom: 1px dotted #aaa;
-              border-left: 1px dotted #aaa;
+              &:not(:nth-child(2)) {
+                border-left: 1px dotted #aaa;
+               }
             }
           }
         }
